--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       DOCKER_APP_DOMAIN: tester.com
       DOCKER_PHP_SERVICE_NAME: websitename-php-fpm
       DOCKER_PHP_SERVICE_PORT: 9000
+      RUN_SHELL_BEFORE_PULL: ${RUN_SHELL_BEFORE_PULL}
     env_file:
       - ../.env
       - ./config/nginx/.env.site.conf
