--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -13,7 +13,6 @@ services:
       - "9000"
 
 
-
   websitename-nginx:
     image: petertharwat/nginx-1.27-github:v1.0.9
     restart: unless-stopped
@@ -27,7 +26,7 @@ services:
       RUN_SHELL_BEFORE_PULL: ${RUN_SHELL_BEFORE_PULL}
     env_file:
       - ../.env
-      - ./config/nginx/.env.site.conf
+      - ./configs/nginx/.env.site.conf
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.followersstore.rule=Host(`test2.followers-store.com`)"
