--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,8 +5,6 @@ services:
     restart: unless-stopped
     environment:
       REPO_URL: ${REPO_URL}
-    env_file:
-      - ./.env
     volumes:
       - ./docker/configs/php/custom-php.ini:/usr/local/etc/php/conf.d/custom-php.ini
     expose:
@@ -14,17 +12,11 @@ services:
   websitename-nginx:
     image: petertharwat/nginx-1.27-github:v1.0.9
     restart: unless-stopped
-    #ports:
-    #  - "80:80"
     environment:
       REPO_URL: ${REPO_URL}
-      DOCKER_APP_DOMAIN: _ test2.followers-store.com
-      DOCKER_PHP_SERVICE_NAME: websitename-php-fpm
-      DOCKER_PHP_SERVICE_PORT: 9000
-      RUN_SHELL_BEFORE_PULL: ${RUN_SHELL_BEFORE_PULL}
-    env_file:
-      - ./.env
-      - ./docker/configs/nginx/.env.site.conf
+      PHP_UPSTREAM: websitename-php-fpm:9000
+    volumes:
+      - ./docker/configs/nginx/.env.site.conf:/etc/nginx/conf.d/default.conf
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.followersstore.rule=Host(`test2.followers-store.com`)"
