--- a/docker/configs/nginx/.env.site.conf
+++ b/docker/configs/nginx/.env.site.conf
@@ -1,104 +1,123 @@
-RUN_SHELL_BEFORE_PULL=cat <<'EOF' > /etc/nginx/conf.d/default.conf
-log_format custom '$$remote_addr - $$remote_user [$$time_local] "$$request" '
-                  'Headers: $$http_user_agent, $$http_cookie, $$http_referer, $$http_x_forwarded_for, $$http_host';
+log_format custom '$remote_addr - $remote_user [$time_local] "$request" '
+              'Headers: $http_user_agent, $http_cookie, $http_referer, $http_x_forwarded_for, $http_host';
 
 gzip on;
 gzip_disable "msie6";
 gzip_vary on;
 gzip_proxied any;
 gzip_comp_level 6;
-gzip_buffers 16 8k;
+gzip_buffers 32 8k;
 gzip_http_version 1.1;
-gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript font/woff font/woff2 image/svg+xml;
 
 client_body_buffer_size 10K;
 client_max_body_size 20000M;
 client_header_buffer_size 1k;
 large_client_header_buffers 4 4k;
 
-server {
-    listen 81;
+
+server {  
+    listen 80; 
     listen 443;
+    #access_log off;
     client_max_body_size 20000M;
-    server_name _ ${DOCKER_APP_DOMAIN} www.${DOCKER_APP_DOMAIN};
-    root /var/www/html/site/public;
+    server_name _; 
+    root /var/www/html/site/public;  
     index index.php index.html index.htm index.nginx-debian.html;
     proxy_cache_valid 200 365d;
-    charset utf-8;
+    charset utf-8; 
+
 
     set_real_ip_from 0.0.0.0/0;
     real_ip_header X-Forwarded-For;
     real_ip_recursive on;
 
-    #error_page 404 403 500 502 503 504 /maintenance.html;
-    #location = /maintenance.html {
-    #    root /usr/share/nginx/html;
-    #    index index.html;
-    #}
+    error_page 404 403 500 502 503 504 /maintenance.html;
+    location = /maintenance.html {
+      root /usr/share/nginx/html;
+      index index.html;
+      #internal;
+    }
 
     location /health-check-nginx {
         return 200 'Healthy';
         add_header Content-Type text/plain;
     }
-
-    if (!-d $$request_filename) {
-        rewrite ^/(.+)/$ /$$1 permanent;
+    if (!-d $request_filename) {
+        rewrite ^/(.+)/$ /$1 permanent;
     }
-    if ($$request_uri ~* //) {
-        rewrite ^/(.*) /$$1 permanent;
+    if ($request_uri ~* //) {
+        rewrite ^/(.*) /$1 permanent;
     }
+    location ~ \.(env|log|htaccess)$ {
+        deny all;
+    } 
 
-    location ~ \.(env|log|htaccess)$$ { deny all; }
+    #access_log off;  
+    error_log /var/log/nginx/error.log error;  
 
-    error_log /var/log/nginx/error.log error;
-    sendfile off;
+    sendfile off;  
+
 
     location ~ /.well-known/acme-challenge {
         root /var/www/certbot;
         allow all;
     }
 
-    if ($$request_uri ~* "^(.*/)index\.php(/?)(.*)") {
-        return 301 $$1$$3;
+    if ($request_uri ~* "^(.*/)index\.php(/?)(.*)") {
+          return 301 $1$3;
     }
 
-    location ~*\.(?:js|jpg|jpeg|gif|png|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|jpe?g|eot|ttf|svg)$$ {
-        access_log off;
-        expires 360d;
-        add_header Access-Control-Allow-Origin *;
-        add_header Pragma public;
-        add_header Cache-Control "public";
-        add_header Vary Accept-Encoding;
-        try_files $$uri $$uri/ /index.php?$$query_string;
+    #proxy_pass_request_headers on;
+    #proxy_set_header X-Forwarded-Proto $scheme;
+    #proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    #proxy_set_header X-Real-IP $remote_addr;
+    #proxy_set_header Host $host;
+        
+    location ~*\.(?:js|jpg|jpeg|gif|png|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|jpe?g,eot|ttf|svg)$ {
+      access_log off;
+      expires 360d;
+      add_header Access-Control-Allow-Origin *;
+      add_header Pragma public;
+      add_header Cache-Control "public";
+      add_header Vary Accept-Encoding; 
+      try_files $uri $uri/ /index.php?$query_string;
     }
 
     location / {
-        if ($$host ~* ^www\.(.*)$$) {
-            return 301 $$scheme://$$1$$request_uri;
+        if ($host ~* ^www\.(.*)$) {
+            return 301 $scheme://$1$request_uri;
         }
+        
         add_header Access-Control-Allow-Origin *;
-        try_files $$uri $$uri/ /index.php?$$query_string;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 
-    location ~ \.php$$ {
-        if ($$host ~* ^www\.(.*)$$) {
-            return 301 $$scheme://$$1$$request_uri;
+    location ~ \.php$ {
+
+        
+
+        if ($host ~* ^www\.(.*)$) {
+            return 301 $scheme://$1$request_uri;
         }
-        try_files $$uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$$;
-        fastcgi_pass ${DOCKER_PHP_SERVICE_NAME}:${DOCKER_PHP_SERVICE_PORT};
+
+
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass ${PHP_UPSTREAM};
         fastcgi_index index.php;
         include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $$document_root$$fastcgi_script_name;
-        fastcgi_param PATH_INFO $$fastcgi_path_info;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param HTTPS on;
-
+      
         fastcgi_read_timeout 8600;
-        fastcgi_intercept_errors off;
-        fastcgi_buffer_size 16k;
-        fastcgi_buffers 4 16k;
-    }
+        fastcgi_intercept_errors off;  
+        fastcgi_buffer_size 16k;  
+        fastcgi_buffers 4 16k; 
+    }  
 
-    location ~ /.ht { deny all; }
+    location ~ /.ht {  
+    deny all;  
+    }
 }
-EOF
