--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
     environment:
       REPO_URL: ${REPO_URL}
       PHP_UPSTREAM: websitename-php-fpm:9000
+      RUN_SHELL_AFTER_PULL: /bin/sh -c "envsubst < /etc/nginx/nginx.conf.template > /etc/nginx/nginx.conf
     volumes:
       - ./docker/configs/nginx/.env.site.conf:/etc/nginx/conf.d/default.conf
     labels:
