--- a/docker/configs/nginx/.env.site.conf
+++ b/docker/configs/nginx/.env.site.conf
@@ -56,11 +56,11 @@ server {
         allow all;
     }
 
-    if ($request_uri ~* "^(.*/)index\.php(/?)(.*)") {
+    if ($request_uri ~* ^(.*/)index\.php(/?)(.*)) {
         return 301 $1$3;
     }
 
-    location ~*\.(?:js|jpg|jpeg|gif|png|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|jpe?g,eot|ttf|svg)$ {
+    location ~*\.(?:js|jpg|jpeg|gif|png|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|eot|ttf)$ {
         access_log off;
         expires 360d;
         add_header Access-Control-Allow-Origin *;
