--- a/docker/configs/nginx/.env.site.conf
+++ b/docker/configs/nginx/.env.site.conf
@@ -31,8 +31,8 @@ server {
 
     error_page 404 403 500 502 503 504 /maintenance.html;
     location = /maintenance.html {
-      root /usr/share/nginx/html;
-      index index.html;
+        root /usr/share/nginx/html;
+        index index.html;
     }
 
     location /health-check-nginx {
@@ -40,8 +40,9 @@ server {
         add_header Content-Type text/plain;
     }
 
+    # fix double slash issue
     if ($request_uri ~* //) {
-        rewrite ^/(.*) /$1 permanent;
+        return 301 $scheme://$host$uri;
     }
 
     location ~ \.(env|log|htaccess)$ {
@@ -56,6 +57,7 @@ server {
         allow all;
     }
 
+    # remove extra parenthesis from regex
     if ($request_uri ~* ^(.*/)index\.php(/?)(.*)) {
         return 301 $1$3;
     }
