--- a/docker/configs/nginx/.env.site.conf
+++ b/docker/configs/nginx/.env.site.conf
@@ -40,8 +40,8 @@ server {
         add_header Content-Type text/plain;
     }
 
-    # fix double slash issue
-    if ($request_uri ~* //) {
+    # redirect double slashes to single slash
+    if ($request_uri ~* "//") {
         return 301 $scheme://$host$uri;
     }
 
@@ -57,7 +57,7 @@ server {
         allow all;
     }
 
-    # remove extra parenthesis from regex
+    # redirect /something/index.php to /something
     if ($request_uri ~* ^(.*/)index\.php(/?)(.*)) {
         return 301 $1$3;
     }
@@ -73,7 +73,7 @@ server {
     }
 
     location / {
-        if ($host ~* ^www\.(.*)$) {
+        if ($host ~* "^www\.(.*)$") {
             return 301 $scheme://$1$request_uri;
         }
         add_header Access-Control-Allow-Origin *;
@@ -81,7 +81,7 @@ server {
     }
 
     location ~ \.php$ {
-        if ($host ~* ^www\.(.*)$) {
+        if ($host ~* "^www\.(.*)$") {
             return 301 $scheme://$1$request_uri;
         }
         try_files $uri =404;
