--- a/docker/configs/nginx/.env.site.conf
+++ b/docker/configs/nginx/.env.site.conf
@@ -15,19 +15,30 @@ client_max_body_size 20000M;
 client_header_buffer_size 1k;
 large_client_header_buffers 4 4k;
 
-server {  
-    listen 80; 
+# Redirect any www.* host to bare domain
+server {
+    listen 80;
+    listen 443;
+    server_name ~^www\.(?<base>.+)$;
+    return 301 $scheme://$base$request_uri;
+}
+
+server {
+    listen 80;
     listen 443;
     client_max_body_size 20000M;
-    server_name _; 
-    root /var/www/html/site/public;  
+    server_name _;
+    root /var/www/html/site/public;
     index index.php index.html index.htm index.nginx-debian.html;
     proxy_cache_valid 200 365d;
-    charset utf-8; 
+    charset utf-8;
 
     set_real_ip_from 0.0.0.0/0;
     real_ip_header X-Forwarded-For;
     real_ip_recursive on;
+
+    error_log /var/log/nginx/error.log error;
+    sendfile off;
 
     error_page 404 403 500 502 503 504 /maintenance.html;
     location = /maintenance.html {
@@ -35,57 +46,45 @@ server {
         index index.html;
     }
 
+    location ^~ /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        allow all;
+    }
+
     location /health-check-nginx {
         return 200 'Healthy';
         add_header Content-Type text/plain;
     }
 
-    # redirect double slashes to single slash
-    if ($request_uri ~* "//") {
-        return 301 $scheme://$host$uri;
-    }
-
-    location ~ \.(env|log|htaccess)$ {
+    # Block sensitive files
+    location ~ /\.(?:env|log|htaccess)$ {
         deny all;
-    } 
-
-    error_log /var/log/nginx/error.log error;  
-    sendfile off;  
-
-    location ~ /.well-known/acme-challenge {
-        root /var/www/certbot;
-        allow all;
     }
 
-    # redirect /something/index.php to /something
-    if ($request_uri ~* ^(.*/)index\.php(/?)(.*)) {
-        return 301 $1$3;
-    }
+    # Strip .../index.php -> ... (permanent)
+    rewrite ^(?<p>/.*/)index\.php/?(?<rest>.*)$ $p$rest permanent;
 
-    location ~*\.(?:js|jpg|jpeg|gif|png|css|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|eot|ttf)$ {
+    # Static assets
+    location ~*\.(?:js|css|jpg|jpeg|png|gif|tgz|gz|rar|bz2|doc|pdf|ppt|tar|wav|bmp|rtf|swf|ico|flv|txt|woff|woff2|svg|mp3|eot|ttf)$ {
         access_log off;
         expires 360d;
         add_header Access-Control-Allow-Origin *;
         add_header Pragma public;
         add_header Cache-Control "public";
-        add_header Vary Accept-Encoding; 
+        add_header Vary Accept-Encoding;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # App
     location / {
-        if ($host ~* "^www\.(.*)$") {
-            return 301 $scheme://$1$request_uri;
-        }
         add_header Access-Control-Allow-Origin *;
         try_files $uri $uri/ /index.php?$query_string;
     }
 
+    # PHP-FPM
     location ~ \.php$ {
-        if ($host ~* "^www\.(.*)$") {
-            return 301 $scheme://$1$request_uri;
-        }
         try_files $uri =404;
-        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
         fastcgi_pass ${PHP_UPSTREAM};
         fastcgi_index index.php;
         include fastcgi_params;
@@ -93,12 +92,13 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         fastcgi_param HTTPS on;
         fastcgi_read_timeout 8600;
-        fastcgi_intercept_errors off;  
-        fastcgi_buffer_size 16k;  
-        fastcgi_buffers 4 16k; 
-    }  
+        fastcgi_intercept_errors off;
+        fastcgi_buffer_size 16k;
+        fastcgi_buffers 4 16k;
+    }
 
-    location ~ /.ht {  
-        deny all;  
+    # Extra safety
+    location ~ /\.ht {
+        deny all;
     }
 }
